fixed animation not working on smaller screens

--- a/src/styles/components/Layout/Layout.module.scss
+++ b/src/styles/components/Layout/Layout.module.scss
@@ -15,15 +15,14 @@
 		margin: 2em 0;
 		padding: 0.75em;
 
-		display: flex;
-		flex-direction: column;
+		display: grid;
+		grid-template-columns: 1fr;
 		gap: 1em;
 
 		@media screen and (min-width: $size-phone-m) {
 			padding: 1.5em;
 		}
 		@media screen and (min-width: $size-tablet-xs) {
-			display: grid;
 			grid-template-columns: 1fr 1fr;
 			gap: 1em;
 		}
