--- a/src/styles/components/UI/LoadingIcon.module.scss
+++ b/src/styles/components/UI/LoadingIcon.module.scss
@@ -4,7 +4,7 @@
 	position: relative;
 	grid-column: 1 / -1;
 	justify-self: center;
-	align-self: center;
+	align-self: start;
 	min-width: 10rem;
 	max-width: 14rem;
 	width: 60%;
